--- a/yast2-vm.spec.in
+++ b/yast2-vm.spec.in
@@ -28,4 +28,6 @@ Summary:	Start installation in a Virtual Machine
 %dir @yncludedir@/vm
 @yncludedir@/vm/*
 @scrconfdir@/*.scr
+%dir /usr/share/YaST2/control
+/usr/share/YaST2/control/vm_install.xml
 %doc @docdir@
