- merged UML module
svn path=/trunk/vm/; revision=26120

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,6 +6,7 @@ yncludedir = @yncludedir@/vm
 
 client_DATA =				\
 	vm.ycp				\
+	uml.ycp				\
 	vm_source_proposal.ycp		\
 	vm_options_proposal.ycp		\
 	vm_disks_proposal.ycp		\
@@ -17,7 +18,9 @@ client_DATA =				\
 	inst_vm_kickoff.ycp		\
 	inst_vm_options.ycp		\
 	inst_vm_network.ycp		\
-	vm_network_proposal.ycp
+	vm_network_proposal.ycp		\
+	uml_user_proposal.ycp		\
+	inst_uml_user.ycp
 
 ynclude_DATA = cmdline.ycp
 
@@ -26,6 +29,7 @@ desktop_DATA =				\
 
 module_DATA =				\
 	VM_XEN.ycp			\
+	VM_UML.ycp			\
 	VM_Common.ycp			\
 	VM.ycp
 
