- new client for Xen domain0 configuration (#117215) - spelling fixes - 2.13.6
svn path=/trunk/vm/; revision=26566

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -17,6 +17,7 @@ client_DATA =				\
 	inst_vm_kickoff.ycp		\
 	inst_vm_options.ycp		\
 	inst_vm_network.ycp		\
+	dom0_setup.ycp			\
 	vm_network_proposal.ycp
 
 ynclude_DATA = cmdline.ycp
