--- a/src/xen.desktop
+++ b/src/xen.desktop
@@ -11,7 +11,7 @@ X-SuSE-YaST-Call=xen
 X-SuSE-YaST-Group=Software
 X-SuSE-YaST-Argument=
 X-SuSE-YaST-RootOnly=true
-X-SuSE-YaST-AutoInst=
+X-SuSE-YaST-AutoInst=configure
 X-SuSE-YaST-Geometry=
 X-SuSE-YaST-SortKey=
 X-SuSE-YaST-AutoinstResource=
