- fixed .spec file (missing inst_xen_mode.ycp in the file list) - 2.13.11
svn path=/trunk/vm/; revision=27094

--- a/yast2-vm.spec.in
+++ b/yast2-vm.spec.in
@@ -24,6 +24,7 @@ Summary:	Start installation in a Virtual Machine
 @clientdir@/xen*.ycp
 @clientdir@/dom0_setup.ycp
 @clientdir@/inst_vm*.ycp
+@clientdir@/inst_xen*.ycp
 @moduledir@/VM*.ycp
 @moduledir@/VM*.ybc
 @desktopdir@/xen.desktop
