- converted neededforbuild to BuildRequires
svn path=/trunk/vm/; revision=27353

--- a/yast2-vm.spec.in
+++ b/yast2-vm.spec.in
@@ -1,8 +1,8 @@
 @HEADER-COMMENT@
 
-# neededforbuild  yast2-devel-packages yast2-perl-bindings perl-Digest-SHA1 perl-gettext yast2-users
 
 @HEADER@
+BuildRequires:	yast2-devel-packages yast2-users
 Requires:	yast2 yast2-installation yast2-users
 
 Summary:	Start installation in a Virtual Machine
