- extract translatable strings from vm_install.xml control file   (#146651) - 2.13.16
svn path=/trunk/vm/; revision=27512

--- a/configure.in.in
+++ b/configure.in.in
@@ -8,5 +8,14 @@
 @YAST2-CHECKS-COMMON@
 @YAST2-CHECKS-YCP@
 
+## Nasty hack: xgettext doesn't work for XML files, so let's symlink it
+( cd control; 
+ for xml in `ls *.xml`; do
+    ln -sf $xml  `basename $xml .xml`.glade
+ done
+ )
+find control -name *.glade > POTFILES
+
 ## and generate the output...
 @YAST2-OUTPUT@
+
