- check valid disk devices in full virtualization mode (#145064) - .spec: removed yast2-devel-packages and yast2-users
svn path=/trunk/vm/; revision=28224

--- a/yast2-vm.spec.in
+++ b/yast2-vm.spec.in
@@ -2,8 +2,8 @@
 
 
 @HEADER@
-BuildRequires:	yast2-devel-packages yast2-users
-Requires:	yast2 yast2-installation yast2-users
+BuildRequires:	perl-XML-Writer update-desktop-files yast2 yast2-devtools
+Requires:	yast2 yast2-installation
 
 Summary:	Start installation in a Virtual Machine
 
