- Overhaul from Provo, to make module more feature complete. - 2.17.28
svn path=/trunk/vm/; revision=29389

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,9 +6,11 @@ yncludedir = @yncludedir@/vm
 
 client_DATA =				\
 	xen.ycp				\
+	vm_helps_proposal.ycp		\
 	vm_autoyast_proposal.ycp	\
 	vm_source_proposal.ycp		\
 	vm_options_proposal.ycp		\
+	vm_hardware_proposal.ycp	\
 	vm_disks_proposal.ycp		\
 	vm_finish.ycp			\
 	vm_network_proposal.ycp		\
@@ -16,11 +18,13 @@ client_DATA =				\
 	inst_vm_autoyast.ycp		\
 	inst_vm_source.ycp		\
 	inst_vm_options.ycp		\
+	inst_vm_hardware.ycp		\
 	inst_vm_disks.ycp		\
 	inst_vm_kickoff.ycp		\
 	inst_vm_options.ycp		\
 	inst_vm_network.ycp		\
 	inst_xen_mode.ycp		\
+	inst_xen_create.ycp		\
 	dom0_setup.ycp			\
 	vm_network_proposal.ycp		\
 	xen_auto.ycp
