--- a/yast2-vm.spec.in
+++ b/yast2-vm.spec.in
@@ -4,6 +4,7 @@
 @HEADER@
 BuildRequires:	perl-XML-Writer update-desktop-files yast2 yast2-devtools yast2-testsuite
 Requires:	yast2 yast2-installation
+Conflicts:	xen-tools < 3.0.2_09762
 
 Summary:	Start installation in a Virtual Machine
 
