--- a/yast2-vm.spec.in
+++ b/yast2-vm.spec.in
@@ -2,7 +2,7 @@
 
 
 @HEADER@
-BuildRequires:	pkg-config perl-XML-Writer update-desktop-files yast2 yast2-devtools yast2-testsuite
+BuildRequires:	perl-XML-Writer update-desktop-files yast2 yast2-devtools yast2-testsuite
 Requires:	yast2 yast2-installation
 Conflicts:	xen-tools < 3.0.2_09762
 
