--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -6,7 +6,7 @@ SUBDIRS = autodocs
 
 htmldir = $(docdir)
 
-doc_DATA =
+doc_DATA = command_line.txt xen_autoyast_example.xml
 html_DATA =
 
 EXTRA_DIST = $(doc_DATA) $(html_DATA)
