--- a/src/xen.desktop
+++ b/src/xen.desktop
@@ -1,6 +1,7 @@
 [Desktop Entry]
+X-SuSE-DocTeamID=ycc_xen
 Type=Application
-Categories=Qt;X-SuSE-YaST;X-SuSE-YaST-System;
+Categories=Qt;X-SuSE-YaST;
 
 X-KDE-ModuleType=Library
 X-KDE-RootOnly=true
@@ -8,7 +9,7 @@ X-KDE-HasReadOnlyMode=true
 X-KDE-Library=yast2
 X-SuSE-YaST-Call=xen
 
-X-SuSE-YaST-Group=System
+X-SuSE-YaST-Group=Virtualization
 X-SuSE-YaST-Argument=
 X-SuSE-YaST-RootOnly=true
 X-SuSE-YaST-AutoInst=configure
@@ -19,6 +20,8 @@ X-SuSE-YaST-AutoinstResource=
 Icon=yast-uml
 Exec=/sbin/yast2 xen
 
-Name=Virtual Machine Management (Xen)
-GenericName=Install and Manage Xen virtual machines
+Name=Install Hypervisor and Tools
+GenericName=Install Hypervisor and Tools
 X-KDE-SubstituteUID=true
+
+X-SuSE-translate=true
