- Added missing check for xenbr0 in the firewall configuration   (#233934) - Clean-up of unused items and simplification of the installation   of the Xen hypervisor / tools. - Added xen-tools >= 3.0.4_13132 to Requires line of rpm spec and   removed the obsoleted Conflicts line. - Added new YaST control center group 'Virtualization' - 2.13.68
svn path=/branches/SuSE-SLE-10-SP1-Branch/vm/; revision=35515

--- a/src/xen.desktop
+++ b/src/xen.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 X-SuSE-DocTeamID=ycc_xen
 Type=Application
-Categories=Qt;X-SuSE-YaST;
+Categories=Qt;X-SuSE-YaST;X-SuSE-YaST-Virtualization;
 
 X-KDE-ModuleType=Library
 X-KDE-RootOnly=true
