--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,21 +2,21 @@
 # Makefile.am for vm/src
 #
 
-yncludedir = @yncludedir@/vm
+groupdir = @desktopdir@/groups
 
-client_DATA =				\
-	xen.ycp				\
-	vm_finish.ycp			\
-	dom0_setup.ycp
+client_DATA =			\
+	xen.ycp			\
+	vm_finish.ycp			
 
-desktop_DATA =				\
+group_DATA =			\
+	virtualization.desktop
+
+desktop_DATA =			\
 	xen.desktop
 
-module_DATA =				\
-	VM_XEN.ycp			\
-	VM_Common.ycp			\
-	VM.ycp
+module_DATA =			\
+	VM_XEN.ycp
 
-EXTRA_DIST = $(client_DATA) $(module_DATA) $(desktop_DATA)
+EXTRA_DIST = $(client_DATA) $(module_DATA) $(group_DATA) $(desktop_DATA)
 
 include $(top_srcdir)/Makefile.am.common
