--- a/yast2-vm.spec.in
+++ b/yast2-vm.spec.in
@@ -3,8 +3,7 @@
 
 @HEADER@
 BuildRequires:	perl-XML-Writer update-desktop-files yast2 yast2-devtools yast2-testsuite
-Requires:	yast2 yast2-installation
-Conflicts:	xen-tools < 3.0.2_09762
+Requires:	yast2 yast2-installation xen-tools >= 3.0.4_13132
 
 Summary:	Start installation in a Virtual Machine
 
@@ -16,18 +15,18 @@ Summary:	Start installation in a Virtual Machine
 @BUILD@
 
 @INSTALL@
+for f in `find $RPM_BUILD_ROOT/usr/share/applications/YaST2/groups/*.desktop` ; do
+    d=${f##*/}
+    %suse_update_desktop_file -d ycc_${d%.desktop} ${d%.desktop}
+done
 
 @CLEAN@
 
 %files
 %defattr(-,root,root)
-@clientdir@/vm*.ycp
-@clientdir@/xen*.ycp
-@clientdir@/dom0_setup.ycp
-@moduledir@/VM*.ycp
-@moduledir@/VM*.ybc
+@clientdir@/vm_finish.ycp
+@clientdir@/xen.ycp
+@moduledir@/VM_XEN.y*
+@desktopdir@/groups/virtualization.desktop
 @desktopdir@/xen.desktop
-@scrconfdir@/*.scr
-%dir /usr/share/YaST2/control
-/usr/share/YaST2/control/vm_install.xml
 %doc @docdir@
