--- a/src/virtualization.desktop
+++ b/src/virtualization.desktop
@@ -14,6 +14,6 @@ X-SuSE-YaST-SortKey=60
 OnlyShowIn=X-SuSE-YaST;
 Icon=virtualization
 
-Name=Virtualization (Xen)
+Name=Virtualization
 
 X-SuSE-translate=true
