Use a default system icon in the virtualization desktop file.
svn path=/branches/SuSE-SLE-10-SP1-Branch/vm/; revision=36245

--- a/src/virtualization.desktop
+++ b/src/virtualization.desktop
@@ -12,7 +12,7 @@ X-SuSE-YaST-Group=Virtualization
 X-SuSE-YaST-SortKey=60
 
 OnlyShowIn=X-SuSE-YaST;
-Icon=virtualization
+Icon=yast-host
 
 Name=Virtualization
 
