--- a/yast2-vm.spec.in
+++ b/yast2-vm.spec.in
@@ -4,7 +4,6 @@
 @HEADER@
 BuildRequires:	perl-XML-Writer update-desktop-files yast2 yast2-devtools yast2-testsuite
 Requires:	yast2 yast2-installation
-Conflicts:	xen-tools < 3.0.2_09762
 
 Summary:	Start installation in a Virtual Machine
 
@@ -16,22 +15,18 @@ Summary:	Start installation in a Virtual Machine
 @BUILD@
 
 @INSTALL@
+for f in `find $RPM_BUILD_ROOT/usr/share/applications/YaST2/groups/*.desktop` ; do
+    d=${f##*/}
+    %suse_update_desktop_file -d ycc_${d%.desktop} ${d%.desktop}
+done
 
 @CLEAN@
 
 %files
 %defattr(-,root,root)
-@clientdir@/vm*.ycp
-@clientdir@/xen*.ycp
-@clientdir@/dom0_setup.ycp
-@clientdir@/inst_vm*.ycp
-@clientdir@/inst_xen*.ycp
-@moduledir@/VM*.ycp
-@moduledir@/VM*.ybc
+@clientdir@/vm_finish.ycp
+@clientdir@/xen.ycp
+@moduledir@/VM_XEN.y*
+@desktopdir@/groups/virtualization.desktop
 @desktopdir@/xen.desktop
-%dir @yncludedir@/vm
-@yncludedir@/vm/*
-@scrconfdir@/*.scr
-%dir /usr/share/YaST2/control
-/usr/share/YaST2/control/vm_install.xml
 %doc @docdir@
