Bug 258519 - Update icon name in yast2-vm
svn path=/branches/SuSE-SLE-10-SP1-Branch/vm/; revision=37239

--- a/src/xen.desktop
+++ b/src/xen.desktop
@@ -16,7 +16,7 @@ X-SuSE-YaST-Geometry=
 X-SuSE-YaST-SortKey=
 X-SuSE-YaST-AutoinstResource=
 
-Icon=yast-uml
+Icon=yast-vm-install
 Exec=/sbin/yast2 xen
 
 Name=Install Hypervisor and Tools
