This is an additional adjustment to the spec file made in the last checkin.  It applies to the same bug.
- The 'Virtualization' category is missing and the virtualization
  icons are in the other category. (#258600)


svn path=/branches/SuSE-SLE-10-SP1-Branch/vm/; revision=37948

--- a/yast2-vm.spec.in
+++ b/yast2-vm.spec.in
@@ -20,6 +20,7 @@ for f in `find $RPM_BUILD_ROOT/usr/share/applications/YaST2/groups/*.desktop` ; 
     %suse_update_desktop_file -d ycc_${d%.desktop} ${d%.desktop}
 done
 %suse_update_desktop_file xen X-SuSE-YaST-Virtualization
+sed -i -e 's/Categories=.*/Categories=Qt;X-SuSE-YaST;X-SuSE-YaST-Virtualization;/g' $RPM_BUILD_ROOT/@desktopdir@/xen.desktop
 
 @CLEAN@
 
