--- a/src/xen.desktop
+++ b/src/xen.desktop
@@ -1,5 +1,4 @@
 [Desktop Entry]
-X-SuSE-DocTeamID=ycc_xen
 Type=Application
 Categories=Qt;X-SuSE-YaST;X-SuSE-YaST-Virtualization;
 
@@ -16,11 +15,9 @@ X-SuSE-YaST-Geometry=
 X-SuSE-YaST-SortKey=
 X-SuSE-YaST-AutoinstResource=
 
-Icon=yast-uml
+Icon=yast-vm-install
 Exec=/sbin/yast2 xen
 
 Name=Install Hypervisor and Tools
 GenericName=Install Hypervisor and Tools
 X-KDE-SubstituteUID=true
-
-X-SuSE-translate=true
