added 'StartupNotify=true' to the desktop file (bnc #304964)
svn path=/trunk/vm/; revision=45521

--- a/src/xen.desktop
+++ b/src/xen.desktop
@@ -21,3 +21,4 @@ Exec=/sbin/yast2 xen
 Name=Install Hypervisor and Tools
 GenericName=Install Hypervisor and Tools
 X-KDE-SubstituteUID=true
+StartupNotify=true
