--- a/src/virtualization.desktop
+++ b/src/virtualization.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Type=Application
-Categories=Qt;X-SuSE-YaST-Virtualization;
+Categories=Settings;System;Qt;X-SuSE-YaST-Virtualization;
 
 X-KDE-ModuleType=Library
 X-KDE-RootOnly=true
