--- a/src/xen.desktop
+++ b/src/xen.desktop
@@ -16,9 +16,8 @@ X-SuSE-YaST-SortKey=
 X-SuSE-YaST-AutoinstResource=
 
 Icon=yast-vm-install
-Exec=/sbin/yast2 xen
+Exec=xdg-su -c "/sbin/yast2 xen"
 
 Name=Install Hypervisor and Tools
 GenericName=Install Hypervisor and Tools
-X-KDE-SubstituteUID=true
 StartupNotify=true
