add relocation-server stuffs to yast2-vm
svn path=/trunk/vm/; revision=64301

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,18 +2,29 @@
 # Makefile.am for vm/src
 #
 
+yncludedir = @yncludedir@/relocation-server
+
 groupdir = @desktopdir@/groups
 
 client_DATA =			\
-	vm_finish.ycp			
+	vm_finish.ycp		\
+	relocation-server.ycp	
+
+ynclude_DATA =          \
+		helps.ycp       \
+		wizards.ycp     \
+		dialogs.ycp     \
+		complex.ycp
 
 group_DATA =			\
 	virtualization.desktop
 
 desktop_DATA =			\
+	relocation-server.desktop
 
 module_DATA =			\
-	VM_XEN.ycp
+	VM_XEN.ycp			\
+	RelocationServer.ycp
 
 EXTRA_DIST = $(client_DATA) $(module_DATA) $(group_DATA) $(desktop_DATA)
 
