bnc#702106 - Remove 32-bit "Install Hypervisor and Tools" from YaST Control Center - FATE#308532
svn path=/trunk/vm/; revision=64626

--- a/yast2-vm.spec.in
+++ b/yast2-vm.spec.in
@@ -3,7 +3,7 @@
 
 @HEADER@
 Group:	System/YaST
-ExclusiveArch:  %ix86 x86_64
+ExclusiveArch:  x86_64
 BuildRequires:	perl-XML-Writer update-desktop-files yast2 yast2-devtools yast2-testsuite
 Requires:	yast2
 
