--- a/src/relocation-server.desktop
+++ b/src/relocation-server.desktop
@@ -17,7 +17,7 @@ X-SuSE-YaST-SortKey=
 X-SuSE-YaST-AutoInstResource=
 
 Icon=yast-vm-install
-Exec=/sbin/yast2 relocation-server 
+Exec=/usr/bin/xdg-su -c '/sbin/yast2 relocation-server'
 
 Name=Relocation Server Configuration
 GenericName=relocation-server
