Update SuSE-Code-11-SP1-Branch with the correct version and source of yast2-vm that should be found in sles11sp1.
svn path=/branches/SuSE-Code-11-SP1-Branch/vm/; revision=65178

--- a/src/virtualization.desktop
+++ b/src/virtualization.desktop
@@ -1,4 +1,6 @@
 [Desktop Entry]
+X-SuSE-translate=true
+X-SuSE-DocTeamID=ycc_virtualization
 Type=Application
 Categories=Settings;System;Qt;X-SuSE-YaST-Virtualization;
 
@@ -14,3 +16,7 @@ OnlyShowIn=X-SuSE-YaST;
 Icon=yast-host
 
 Name=Virtualization
+
+Exec=yast2
+
+
