--- a/yast2-vm.spec.in
+++ b/yast2-vm.spec.in
@@ -6,7 +6,7 @@ ExclusiveArch:  %ix86 x86_64
 BuildRequires:	perl-XML-Writer update-desktop-files yast2 yast2-devtools yast2-testsuite
 Requires:	yast2
 
-Summary:	Start installation in a Virtual Machine
+Summary:	Configure Hypervisor and Tools for Xen and KVM
 
 %description
 -
