Cleanups for building and installing on sles11sp2. bnc#702106 - Remove 32-bit "Install Hypervisor and Tools" from YaST Control Center - FATE#308532 fate#311371 - Enhance yast to configure live migration for Xen and KVM
svn path=/branches/SuSE-Code-11-SP2-Branch/vm/; revision=65228

--- a/yast2-vm.spec.in
+++ b/yast2-vm.spec.in
@@ -9,21 +9,34 @@ Requires:	yast2
 Summary:	Configure Hypervisor and Tools for Xen and KVM
 
 %description
--
+This YaST module configures and installs a virtual machine.
 
 @PREP@
 
 @BUILD@
 
 @INSTALL@
+%ifarch %ix86
+rm -f $RPM_BUILD_ROOT/usr/share/applications/YaST2/xen.desktop
+rm -f $RPM_BUILD_ROOT/usr/share/applications/YaST2/relocation-server.desktop
+%endif
 
 @CLEAN@
 
 %files
 %defattr(-,root,root)
-@clientdir@/vm_finish.ycp
+%dir @scrconfdir@
+%dir @yncludedir@
+@clientdir@/relocation-server.ycp
 @clientdir@/xen.ycp
+@clientdir@/vm_finish.ycp
 @moduledir@/VM_XEN.y*
+@moduledir@/RelocationServer.*
+@yncludedir@/*
+@scrconfdir@/*
 @desktopdir@/groups/virtualization.desktop
+%ifarch x86_64
+@desktopdir@/relocation-server.desktop
 @desktopdir@/xen.desktop
+%endif
 %doc @docdir@
