--- a/src/relocation-server.desktop
+++ b/src/relocation-server.desktop
@@ -6,20 +6,19 @@ X-KDE-ModuleType=Library
 X-KDE-RootOnly=true
 X-KDE-HasReadOnlyMode=true
 X-KDE-Library=yast2
-X-SuSE-YaST-Call=xen
+X-SuSE-YaST-Call=relocation-server
 
 X-SuSE-YaST-Group=Virtualization
 X-SuSE-YaST-Argument=
 X-SuSE-YaST-RootOnly=true
+X-SuSE-YaST-AutoInst=
 X-SuSE-YaST-Geometry=
 X-SuSE-YaST-SortKey=
-X-SuSE-YaST-AutoinstResource=
+X-SuSE-YaST-AutoInstResource=
 
 Icon=yast-vm-install
-Exec=/sbin/yast2 xen
+Exec=/usr/bin/xdg-su -c "/sbin/yast2 relocation-server"
 
-Name=Install Hypervisor and Tools
-GenericName=Install Hypervisor and Tools
-X-KDE-SubstituteUID=true
+Name=Relocation Server Configuration
+GenericName=relocation-server
 StartupNotify=true
-
