- Update desktop files with more descriptive information in the GenericName. - 2.17.5
svn path=/branches/SuSE-Code-11-SP2-Branch/vm/; revision=65260

--- a/src/relocation-server.desktop
+++ b/src/relocation-server.desktop
@@ -20,5 +20,5 @@ Icon=yast-vm-install
 Exec=/usr/bin/xdg-su -c "/sbin/yast2 relocation-server"
 
 Name=Relocation Server Configuration
-GenericName=relocation-server
+GenericName=Configure Host for Virtual Machine Migration
 StartupNotify=true
