--- a/yast2-vm.spec.in
+++ b/yast2-vm.spec.in
@@ -4,7 +4,7 @@
 @HEADER@
 ExclusiveArch:  %ix86 x86_64
 BuildRequires:	perl-XML-Writer update-desktop-files yast2 yast2-devtools yast2-testsuite
-Requires:	yast2
+Requires:	yast2 >= 2.21.22
 
 Summary:	Configure Hypervisor and Tools for Xen and KVM
 
