- bcn#887933 - Yast2 module Xen should be renamed to something more   generic   Renamed the following files and updated the methods to reflect the   new generic naming syntax:     xen.rb -> virtualization.rb     xen.desktop -> virtualization-config.desktop     VM_XEN.rb -> VirtConfig.rb - 3.1.16

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,10 +2,10 @@
 
 module_DATA = \
   modules/RelocationServer.rb \
-  modules/VM_XEN.rb
+  modules/VirtConfig.rb
 
 client_DATA = \
-  clients/xen.rb \
+  clients/virtualization.rb \
   clients/vm_finish.rb \
   clients/relocation-server.rb
 
@@ -21,7 +21,7 @@ scrconf_DATA = \
 
 desktop_DATA = \
   desktop/relocation-server.desktop \
-  desktop/xen.desktop
+  desktop/virtualization-config.desktop
 
 desktop1dir = @desktopdir@/groups
 desktop1_DATA = \
