bnc#889579 - yast2-vm fails to start

--- a/src/desktop/virtualization-config.desktop
+++ b/src/desktop/virtualization-config.desktop
@@ -5,7 +5,7 @@ Categories=Settings;System;Qt;X-SuSE-YaST;X-SuSE-YaST-Virtualization;
 X-KDE-ModuleType=Library
 X-KDE-HasReadOnlyMode=true
 X-KDE-Library=yast2
-X-SuSE-YaST-Call=xen
+X-SuSE-YaST-Call=virtualization
 
 X-SuSE-YaST-Group=Virtualization
 X-SuSE-YaST-Argument=
