--- a/src/desktop/virtualization-config.desktop
+++ b/src/desktop/virtualization-config.desktop
@@ -12,6 +12,7 @@ X-SuSE-YaST-RootOnly=true
 X-SuSE-YaST-Geometry=
 X-SuSE-YaST-SortKey=
 X-SuSE-YaST-AutoinstResource=
+X-SuSE-YaST-Keywords=vm,virtualization
 
 Icon=yast-vm-install
 Exec=/usr/bin/xdg-su -c "/sbin/yast2 virtualization"
