Adapt files for the SLE-15-SP5 branch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
   # FIXME: no unite tests
   # Tests:
   #   runs-on: ubuntu-latest
-  #   container: registry.opensuse.org/yast/head/containers/yast-ruby:latest
+  #   container: registry.opensuse.org/yast/sle-15/sp5/containers/yast-ruby:latest
 
   #   steps:
 
@@ -35,7 +35,7 @@ jobs:
   # FIXME: Rubocop is not used here
   # Rubocop:
   #   runs-on: ubuntu-latest
-  #   container: registry.opensuse.org/yast/head/containers/yast-ruby:latest
+  #   container: registry.opensuse.org/yast/sle-15/sp5/containers/yast-ruby:latest
 
   #   steps:
 
@@ -50,11 +50,9 @@ jobs:
 
     strategy:
       fail-fast: false
-      matrix:
-        distro:  [ "tumbleweed", "leap_latest" ]
 
     container:
-      image: registry.opensuse.org/yast/head/containers_${{matrix.distro}}/yast-ruby
+      image: registry.opensuse.org/yast/sle-15/sp5/containers/yast-ruby
 
     steps:
 
@@ -67,7 +65,7 @@ jobs:
   # FIXME: no yardops
   # Yardoc:
   #   runs-on: ubuntu-latest
-  #   container: registry.opensuse.org/yast/head/containers/yast-ruby:latest
+  #   container: registry.opensuse.org/yast/sle-15/sp5/containers/yast-ruby:latest
 
   #   steps:
 
@@ -84,11 +82,9 @@ jobs:
 
     strategy:
       fail-fast: false
-      matrix:
-        distro: [ "leap_latest" ]
 
     container:
-      image: registry.opensuse.org/yast/head/containers_${{matrix.distro}}/yast-ruby
+      image: registry.opensuse.org/yast/sle-15/sp5/containers/yast-ruby
 
     steps:
 
